bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_pattern_rest_middle.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Tuple {
                                        fields: [
                                            Pattern {
                                                kind: Ident {
                                                    by_ref: false,
                                                    mutable: false,
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 14,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 15,
                                                        },
                                                    },
                                                    subpattern: None,
                                                },
                                                span: Span {
                                                    start: 14,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 15,
                                                },
                                            },
                                            Pattern {
                                                kind: Ident {
                                                    by_ref: false,
                                                    mutable: false,
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 25,
                                                            end: 29,
                                                            start_line: 1,
                                                            start_col: 26,
                                                        },
                                                    },
                                                    subpattern: None,
                                                },
                                                span: Span {
                                                    start: 25,
                                                    end: 29,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                        ],
                                        rest_pos: Some(
                                            1,
                                        ),
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 33,
                                                                end: 38,
                                                                start_line: 1,
                                                                start_col: 34,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 33,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 34,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 33,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 34,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 39,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 41,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 41,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 41,
        start_line: 1,
        start_col: 1,
    },
}
